@@ -224,7 +224,8 @@ AM_CFLAGS = \
 	@LIBUNWIND_CFLAGS@ \
 	@MPG123_CFLAGS@ \
 	@SBC_CFLAGS@ \
-	@SNDFILE_CFLAGS@
+	@SNDFILE_CFLAGS@ \
+	@SPANDSP_CFLAGS@
 
 LDADD = \
 	@AAC_LIBS@ \
@@ -243,4 +244,5 @@ LDADD = \
 	@MP3LAME_LIBS@ \
 	@MPG123_LIBS@ \
 	@SBC_LIBS@ \
-	@SNDFILE_LIBS@
+	@SNDFILE_LIBS@ \
+	@SPANDSP_LIBS@
