@@ -1,6 +1,6 @@
 /*
  * test-msbc.c
- * Copyright (c) 2016-2021 Arkadiusz Bokowy
+ * Copyright (c) 2016-2022 Arkadiusz Bokowy
  *
  * This file is a part of bluez-alsa.
  *
@@ -10,6 +10,7 @@
 
 #include <stdbool.h>
 #include <stdint.h>
+#include <stdio.h>
 #include <string.h>
 
 #include <check.h>
@@ -18,6 +19,7 @@
 #include "codec-msbc.h"
 #include "shared/defs.h"
 #include "shared/ffb.h"
+#include "shared/log.h"
 
 #include "inc/sine.inc"
 #include "../src/codec-msbc.c"
@@ -86,16 +88,16 @@ START_TEST(test_msbc_find_h2_header) {
 
 START_TEST(test_msbc_encode_decode) {
 
-	struct esco_msbc msbc = { 0 };
-	int16_t sine[1024];
-	size_t len;
-	size_t i;
-	int rv;
-
+	int16_t sine[8 * MSBC_CODESAMPLES];
 	snd_pcm_sine_s16_2le(sine, ARRAYSIZE(sine), 1, 0, 1.0 / 128);
 
 	uint8_t data[sizeof(sine)];
 	uint8_t *data_tail = data;
+
+	struct esco_msbc msbc = { 0 };
+	size_t len;
+	size_t i;
+	int rv;
 
 	msbc.initialized = false;
 	ck_assert_int_eq(msbc_init(&msbc), 0);
@@ -110,7 +112,7 @@ START_TEST(test_msbc_encode_decode) {
 
 		len = ffb_blen_out(&msbc.data);
 		memcpy(data_tail, msbc.data.data, len);
-		ffb_shift(&msbc.data, len);
+		ffb_rewind(&msbc.data);
 		data_tail += len;
 
 	}
@@ -135,12 +137,81 @@ START_TEST(test_msbc_encode_decode) {
 
 		len = ffb_len_out(&msbc.pcm);
 		memcpy(pcm_tail, msbc.pcm.data, len * msbc.pcm.size);
-		ffb_shift(&msbc.pcm, len);
+		ffb_rewind(&msbc.pcm);
 		pcm_tail += len;
 
 	}
 
 	ck_assert_int_eq(pcm_tail - pcm, 960);
+
+	msbc_finish(&msbc);
+
+} END_TEST
+
+START_TEST(test_msbc_decode_plc) {
+
+	int16_t sine[18 * MSBC_CODESAMPLES];
+	snd_pcm_sine_s16_2le(sine, ARRAYSIZE(sine), 1, 0, 1.0 / 128);
+
+	struct esco_msbc msbc = { .initialized = false };
+	ck_assert_int_eq(msbc_init(&msbc), 0);
+
+	uint8_t data[sizeof(sine)];
+	uint8_t *data_tail = data;
+
+	debug("Simulating mSBC packet loss events");
+
+	int rv;
+	size_t counter, i;
+	for (rv = 1, counter = i = 0; rv > 0; counter++) {
+
+		size_t len = MIN(ARRAYSIZE(sine) - i, ffb_len_in(&msbc.pcm));
+		memcpy(msbc.pcm.tail, &sine[i], len * msbc.pcm.size);
+		ffb_seek(&msbc.pcm, len);
+		i += len;
+
+		rv = msbc_encode(&msbc);
+
+		len = ffb_blen_out(&msbc.data);
+		memcpy(data_tail, msbc.data.data, len);
+		ffb_rewind(&msbc.data);
+
+		/* simulate packet loss */
+		if (counter == 2 ||
+				(6 <= counter && counter <= 8) ||
+				/* 4 packets (undetectable) */
+				(12 <= counter && counter <= 15)) {
+			fprintf(stderr, "_");
+			continue;
+		}
+
+		fprintf(stderr, "x");
+		data_tail += len;
+
+	}
+
+	fprintf(stderr, "\n");
+
+	/* reinitialize encoder/decoder handler */
+	ck_assert_int_eq(msbc_init(&msbc), 0);
+
+	size_t samples = 0;
+	for (rv = 1, i = 0; rv > 0; ) {
+
+		size_t len = MIN((data_tail - data) - i, ffb_blen_in(&msbc.data));
+		memcpy(msbc.data.tail, &data[i], len);
+		ffb_seek(&msbc.data, len);
+		i += len;
+
+		rv = msbc_decode(&msbc);
+
+		samples += ffb_len_out(&msbc.pcm);
+		ffb_rewind(&msbc.pcm);
+
+	}
+
+	/* we should recover all except consecutive 4 frames */
+	ck_assert_int_eq(samples, (18 - 4) * MSBC_CODESAMPLES);
 
 	msbc_finish(&msbc);
 
@@ -157,6 +228,7 @@ int main(void) {
 	tcase_add_test(tc, test_msbc_init);
 	tcase_add_test(tc, test_msbc_find_h2_header);
 	tcase_add_test(tc, test_msbc_encode_decode);
+	tcase_add_test(tc, test_msbc_decode_plc);
 
 	srunner_run_all(sr, CK_ENV);
 	int nf = srunner_ntests_failed(sr);
