@@ -3,6 +3,7 @@ unreleased
 
 - optional support for A2DP FastStream codec (music & voice)
 - optional support for A2DP LC3plus codec (music & voice)
+- packet loss concealment (PLC) for HFP with mSBC codec
 - enable/disable BT profiles/codecs via command line options
 - allow to select BT transport codec with ALSA configuration
 - allow to set PCM volume properties with ALSA configuration
